# Whale

./: .dockerignore  .gitignore  ASSET_LICENSES.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  Dockerfile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  YTDLP_SHA256  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: android-release.yml  android.yml  build.yml  ci.yml  ytdlp-update.yml
app/: .gitignore  README.md
app/scripts/: build-fdroid.sh  release-android.sh
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json  mobile.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
distribution/whatsnew/: whatsnew-en-US  whatsnew-zh-CN
docs/: ANDROID.md  API.md  ARCHITECTURE.md  ATTRIBUTION.md  CONFIG.md  CONFIGURATION.md  COOKIES.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  DOWNLOAD_PIPELINE.md  FRONTEND.md  GETTING_STARTED.md  PRIVACY.md  RELEASING_ANDROID.md  SEAL_IMPORT.md  SECURITY.md  USER_GUIDE.md
extension/: .gitignore  README.md  build-userscript.ts  build.ts  manifest.json  package-lock.json  package.json  tsconfig.json
extension/scripts/: mcp-verify.mjs  verify-e2ee.ts
extension/src/: background.ts
extension/src/content/: detect.ts  inject.css  sites.ts
extension/src/lib/: api.ts  e2ee.ts  glyphs.ts  icons.ts  net.ts  progress.ts  types.ts
extension/src/popup/: popup.css  popup.html  popup.ts
extension/src/userscript/: main.ts  shim.ts
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/changelogs/: 1000.txt
fastlane/metadata/android/zh-CN/: full_description.txt  short_description.txt
fastlane/metadata/android/zh-CN/changelogs/: 1000.txt
frontend/: build.mjs  check-no-javascript.ts  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.sw.json
frontend/src/: app.ts  e2ee.ts  i18n.ts  style.css  sw.ts  theme.ts  thumbcache.ts
migrations/: 0002_public.sql  0003_public_slug.sql  0004_clients.sql  0005_public_expiry.sql  0006_public_hits.sql  0007_reset_private_hits.sql  0016_website_blur.sql  0017_share_slug.sql  0018_website_format_subs.sql  0020_target_height.sql  0021_requested_height.sql  0023_prune_nsfw_add_mainstream.sql
packaging/fdroid/: com.orca.app.yml
packaging/screenshots/: demo-data.js
src/: archive.rs  config.rs  cookies.rs  e2ee.rs  errlog.rs  error.rs  main.rs  net_guard.rs  net_proxy.rs  platform.rs  queue.rs  resolution.rs  safepath.rs  seal_import.rs  session.rs  types.rs  url_normalize.rs  web.rs  websites.rs
src/api/: archive.rs  auth.rs  clients.rs  cookies.rs  emedia.rs  events.rs  handshake.rs  items.rs  media.rs  mod.rs  subs.rs  websites.rs
src/db/: mod.rs  queries.rs
src/ytdlp/: download.rs  metadata.rs  mod.rs  options.rs
web/: app.js  index.html  manifest.webmanifest  style.css  sw.js  theme.js
