[package]
name = "orca"
version = "0.1.0"
edition = "2021"
rust-version = "1.97"
license = "GPL-3.0-or-later"
repository = "https://github.com/Meeks233/Orca"
homepage = "https://github.com/Meeks233/Orca"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
anyhow = "1"
thiserror = "2"
# Insertion-ordered set for the download archive: O(1) dedup like a HashSet, but
# it remembers the order keys were recorded in, which is what lets the editor list
# them newest-first. See src/archive.rs.
indexmap = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
rust-embed = "8"
mime_guess = "2"
futures = "0.3"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
aes-gcm = "0.10"
base64 = "0.22"
# Forward-secret secure channel (see docs/SECURITY.md): ephemeral P-256 ECDH +
# HKDF-SHA256 session keys, so the token is never derivable from anything on the
# wire and past traffic stays secret if it later leaks.
p256 = { version = "0.14", features = ["ecdh"] }
hkdf = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
tempfile = "3"
proptest = "1"

# Strip symbols from the release binary (~8.9M -> ~5M). Deliberately no LTO /
# codegen-units=1 / opt-level="z": those slow the compile substantially, which
# would fight the dev rebuild loop for a binary that's a rounding error next to
# ffmpeg+python3 in the runtime image.
[profile.release]
strip = true
