[package]
name = "whale-app"
version = "0.1.0"
edition = "2021"
description = "Whale Android/desktop shell — reuses the web UI"
default-run = "whale-app"

# The mobile entry point is a cdylib/staticlib; desktop uses the bin below.
[lib]
name = "whale_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Android/iOS share-target: receives ACTION_SEND intents into a queue the
# frontend drains. Mobile-only so desktop builds stay lean.
[target."cfg(any(target_os = \"android\", target_os = \"ios\"))".dependencies]
tauri-plugin-mobile-sharetarget = "2"
