[package]
name = "orca-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.97"
license = "GPL-3.0-or-later"
repository = "https://github.com/Meeks233/Orca"
description = "Orca Android/desktop shell — reuses the web UI"
default-run = "orca-app"

# The mobile entry point is a cdylib/staticlib; desktop uses the bin below.
[lib]
name = "orca_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Native notifications: Seal-style download-progress notifications on Android
# (and desktop). Permission is requested from the frontend on launch.
tauri-plugin-notification = "2"

# Process control: lets the frontend quit the app (invoke `plugin:process|exit`)
# for the Android "press Back again to exit" gesture — see web/app.js.
tauri-plugin-process = "2"

# External links: hands a URL to the OS browser instead of loading it inside the
# app's own WebView (which has no chrome to get back from). Used by the Settings
# footer's issue-tracker / privacy / source links. Scoped in capabilities to this
# project's own URLs — see capabilities/default.json.
tauri-plugin-opener = "2"

# Android/iOS share-target: receives ACTION_SEND intents into a queue the
# frontend drains. Mobile-only so desktop builds stay lean.
[target."cfg(any(target_os = \"android\", target_os = \"ios\"))".dependencies]
tauri-plugin-mobile-sharetarget = "2"

# Strip the debug library. `cargo tauri android build --debug` compiles the
# cdylib with the `dev` profile, which bakes ~100MB of DWARF debuginfo into
# liborca_app_lib.so — that alone was ~90% of the debug APK. AGP does NOT strip
# native libs for debug variants, so we strip at the Rust link step instead. The
# test APK is for functional testing, not native debugging, so full strip is fine
# (drops the .so from ~112MB to ~20MB). Release already strips via ProGuard/AGP.
[profile.dev]
strip = true
